--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node lol_backend_server.js",
     "dev": "nodemon lol_backend_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests/**/*.test.js",
+    "test:watch": "mocha tests/**/*.test.js --watch"
   },
   "keywords": ["league-of-legends", "gaming", "analytics", "coach"],
   "author": "Your Name",
@@ -21,6 +22,8 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "mocha": "^10.2.0",
+    "chai": "^4.3.7"
   }
 }
